syntax = "proto3";
package odachin;
import "google/protobuf/empty.proto";

service OdachinService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // TODO 未テスト
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc CreateGroup(CreateGroupRequest) returns (google.protobuf.Empty);
  rpc InviteUser(InviteUserRequest) returns (google.protobuf.Empty);
  rpc AcceptInvitation(AcceptInvitationRequest) returns (google.protobuf.Empty);
  rpc RegisterReward(RegisterRewardRequest) returns (google.protobuf.Empty);
  rpc DeleteReward(DeleteRewardRequest) returns (google.protobuf.Empty);
  rpc RegisterAllowance(RegisterAllowanceRequest) returns (google.protobuf.Empty);
  rpc UpdateAllowance(UpdateAllowanceRequest) returns (google.protobuf.Empty);
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
}

enum Status {
  SUCCESS = 0;  // 成功
  FAILURE = 1;  // 失敗
}

enum Role {
  PARENT = 0;  // 親
  CHILD = 1;   // 子供
}

enum DayOfWeek {
  MONDAY = 0;
  TUESDAY = 1;
  WEDNESDAY = 2;
  THURSDAY = 3;
  FRIDAY = 4;
  SATURDAY = 5;
  SUNDAY = 6;
}
enum IntervalType {
  EVERY_N_DAY = 0;   // n日ごと
  WEEKLY = 1;  // 毎週
  MONTHLY = 2; // 毎月
}

message CreateUserRequest {
  string userId = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  Role role = 5;
}

message CreateUserResponse {
  string token =1;
}

message UpdateUserRequest {
  optional string name = 1;
  optional string email = 2;
  optional string password = 3;
  optional bytes profileImage = 4;
}

message LoginRequest {
  string userId = 1;
  string password = 2;
}

message LoginResponse {
  string token =1;
}

message CreateGroupRequest {
  string FamilyName = 1;
}

message InviteUserRequest {
  string toUserId = 1;
}

message AcceptInvitationRequest {
  uint64 invitationId = 1;
}

message RegisterRewardRequest {
  string toUserId = 1;
  double amount = 2;
  string reason  =3;
}

message DeleteRewardRequest {
  uint64 rewardId = 1;
}

message RegisterAllowanceRequest {
  string toUserId = 1;
  double amount = 2;
  IntervalType intervalType = 3;
  optional uint32 interval = 4;
  optional uint32 date = 5;
  optional DayOfWeek dayOfWeek = 6;
}

message UpdateAllowanceRequest {
  uint64 allowanceId = 1;
  optional double amount = 2;
  optional IntervalType intervalType = 3;
  optional uint32 interval = 4;
  optional uint32 date = 5;
  optional DayOfWeek dayOfWeek = 6;
}

message GetUserInfoRequest {
  string userId = 1;
}

message GetUserInfoResponse {
  string userId = 1;
  string name = 2;
  Role role = 3;
  optional string avatarImageUrl = 4;
}