syntax = "proto3";
package odachin.reward;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

// TODO 申請と報酬の取得の実装
service RewardService {
  rpc Reward(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc RegisterReward(RegisterRewardRequest) returns (google.protobuf.Empty);
  rpc DeleteReward(DeleteRewardRequest) returns (google.protobuf.Empty);
  rpc GetRewardList(GetRewardListRequest) returns (GetRewardListResponse);
  rpc GetChildRewardList(GetChildRewardListRequest)
      returns (GetChildRewardListResponse);
  rpc GetUncompletedRewardCount(google.protobuf.Empty)
      returns (GetUncompletedRewardCountResponse);
  rpc ReportReward(ReportRewardRequest) returns (google.protobuf.Empty);
  rpc GetReportedRewardList(google.protobuf.Empty)
      returns (GetReportedRewardListResponse);
  rpc ApproveReward(ApproveRewardRequest) returns (google.protobuf.Empty);
  rpc RejectReward(RejectRewardRequest) returns (google.protobuf.Empty);
}

message Reward {
  enum Type {
    DAILY = 0;   // 毎日
    WEEKLY = 1;  // 毎週
    MONTHLY = 2; // 毎月
  }
}

message RewardInfo {
  uint64 reward_period_id = 1 [ (buf.validate.field).int64.gte = 1 ];
  string from_user_id = 2 [ (buf.validate.field).string.min_len = 1 ];
  string to_user_id = 3 [ (buf.validate.field).string.min_len = 1 ];
  double amount = 4 [ (buf.validate.field).double.gt = 0 ];
  Reward.Type reward_type = 5 [ (buf.validate.field).enum.defined_only = true ];
  string title = 6 [ (buf.validate.field).string.min_len = 1 ];
  string description = 7 [ (buf.validate.field).string.min_len = 1 ];
  string status = 8 [ (buf.validate.field).string.min_len = 1 ];
  google.protobuf.Timestamp start_date = 9;
  google.protobuf.Timestamp end_date = 10;
}

message RegisterRewardRequest {
  string to_user_id = 1 [ (buf.validate.field).string.min_len = 1 ];
  double amount = 2 [ (buf.validate.field).double.gt = 0 ];
  Reward.Type reward_type = 3 [ (buf.validate.field).enum.defined_only = true ];
  string title = 4 [ (buf.validate.field).string.min_len = 1 ];
  string description = 5 [ (buf.validate.field).string.min_len = 1 ];
}

message DeleteRewardRequest {
  uint64 reward_id = 1 [ (buf.validate.field).uint64.gte = 1 ];
}

message GetRewardListRequest {
  Reward.Type reward_type = 1 [ (buf.validate.field).enum.defined_only = true ];
}

message GetRewardListResponse { repeated RewardInfo reward_list = 1; }

message GetChildRewardListRequest {
  string child_id = 1 [ (buf.validate.field).string.min_len = 1 ];
  Reward.Type reward_type = 2 [ (buf.validate.field).enum.defined_only = true ];
}

message GetChildRewardListResponse { repeated RewardInfo reward_list = 1; }

message GetUncompletedRewardCountResponse {
  uint32 daily_count = 1;
  uint32 weekly_count = 2;
  uint32 monthly_count = 3;
}

message ReportRewardRequest {
  uint64 reward_period_id = 1 [ (buf.validate.field).uint64.gte = 1 ];
}

message GetReportedRewardListResponse { repeated RewardInfo reward_list = 1; }

message ApproveRewardRequest {
  uint64 reward_period_id = 1 [ (buf.validate.field).uint64.gte = 1 ];
}

message RejectRewardRequest {
  uint64 reward_period_id = 1 [ (buf.validate.field).uint64.gte = 1 ];
}